[gd_scene load_steps=89 format=3 uid="uid://c6oi3wlnv8t7i"]

[ext_resource type="Script" path="res://scenes/controls_hint.gd" id="1_jx558"]
[ext_resource type="FontFile" uid="uid://omargf2labe" path="res://Assets/fonts/Robot Crush.ttf" id="1_tvw4l"]
[ext_resource type="Texture2D" uid="uid://dvi54gybw336b" path="res://Assets/Controls/gdb-keyboard-2.png" id="2_fl3x3"]
[ext_resource type="Texture2D" uid="uid://d1q2g8bpf7atj" path="res://Assets/Controls/gdb-switch-2.png" id="3_1lsbx"]
[ext_resource type="Texture2D" uid="uid://tr5rdwvg3brg" path="res://Assets/Controls/gdb-playstation-2.png" id="4_g0thu"]
[ext_resource type="Texture2D" uid="uid://rdwslsowfsmu" path="res://Assets/Controls/gdb-xbox-2.png" id="5_0bg8b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nd7g3"]
atlas = ExtResource("2_fl3x3")
region = Rect2(496, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg6ok"]
atlas = ExtResource("2_fl3x3")
region = Rect2(496, 97, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_it1p6"]
atlas = ExtResource("3_1lsbx")
region = Rect2(336, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nilml"]
atlas = ExtResource("3_1lsbx")
region = Rect2(352, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln101"]
atlas = ExtResource("3_1lsbx")
region = Rect2(368, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_287qh"]
atlas = ExtResource("3_1lsbx")
region = Rect2(384, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgm6m"]
atlas = ExtResource("4_g0thu")
region = Rect2(368, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hexas"]
atlas = ExtResource("4_g0thu")
region = Rect2(384, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6bj0"]
atlas = ExtResource("4_g0thu")
region = Rect2(400, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybl5k"]
atlas = ExtResource("4_g0thu")
region = Rect2(416, 96, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bjvqk"]
atlas = ExtResource("5_0bg8b")
region = Rect2(368, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mwnwk"]
atlas = ExtResource("5_0bg8b")
region = Rect2(384, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3myyj"]
atlas = ExtResource("5_0bg8b")
region = Rect2(400, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kam4f"]
atlas = ExtResource("5_0bg8b")
region = Rect2(416, 64, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wtu13"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nd7g3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg6ok")
}],
"loop": true,
"name": &"keyboard",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_it1p6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nilml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln101")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_287qh")
}],
"loop": true,
"name": &"nintendo",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgm6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hexas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6bj0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybl5k")
}],
"loop": true,
"name": &"playstation",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bjvqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mwnwk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3myyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kam4f")
}],
"loop": true,
"name": &"xbox",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_h11go"]
atlas = ExtResource("2_fl3x3")
region = Rect2(496, 63, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gydf7"]
atlas = ExtResource("2_fl3x3")
region = Rect2(528, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dhk3l"]
atlas = ExtResource("3_1lsbx")
region = Rect2(480, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ry7f8"]
atlas = ExtResource("3_1lsbx")
region = Rect2(496, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq3cy"]
atlas = ExtResource("3_1lsbx")
region = Rect2(512, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mord1"]
atlas = ExtResource("3_1lsbx")
region = Rect2(528, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_r85eq"]
atlas = ExtResource("4_g0thu")
region = Rect2(480, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rwvwu"]
atlas = ExtResource("4_g0thu")
region = Rect2(496, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7llia"]
atlas = ExtResource("4_g0thu")
region = Rect2(512, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgwwk"]
atlas = ExtResource("4_g0thu")
region = Rect2(528, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s40jm"]
atlas = ExtResource("5_0bg8b")
region = Rect2(480, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ylsbf"]
atlas = ExtResource("5_0bg8b")
region = Rect2(496, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihkfy"]
atlas = ExtResource("5_0bg8b")
region = Rect2(512, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u50wj"]
atlas = ExtResource("5_0bg8b")
region = Rect2(528, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kkyq8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h11go")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gydf7")
}],
"loop": true,
"name": &"keyboard",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dhk3l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ry7f8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq3cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mord1")
}],
"loop": true,
"name": &"nintendo",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r85eq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rwvwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7llia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgwwk")
}],
"loop": true,
"name": &"playstation",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s40jm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ylsbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihkfy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u50wj")
}],
"loop": true,
"name": &"xbox",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vkv4v"]
atlas = ExtResource("2_fl3x3")
region = Rect2(96, 224, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebvjo"]
atlas = ExtResource("2_fl3x3")
region = Rect2(96, 336, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_663ar"]
atlas = ExtResource("3_1lsbx")
region = Rect2(480, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2bls"]
atlas = ExtResource("3_1lsbx")
region = Rect2(496, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv4dn"]
atlas = ExtResource("3_1lsbx")
region = Rect2(512, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_eftg0"]
atlas = ExtResource("3_1lsbx")
region = Rect2(528, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_at0u5"]
atlas = ExtResource("4_g0thu")
region = Rect2(480, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7clw8"]
atlas = ExtResource("4_g0thu")
region = Rect2(496, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgp33"]
atlas = ExtResource("4_g0thu")
region = Rect2(512, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ub1rt"]
atlas = ExtResource("4_g0thu")
region = Rect2(528, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouias"]
atlas = ExtResource("5_0bg8b")
region = Rect2(480, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1y2h"]
atlas = ExtResource("5_0bg8b")
region = Rect2(496, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ha8d1"]
atlas = ExtResource("5_0bg8b")
region = Rect2(512, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x67w8"]
atlas = ExtResource("5_0bg8b")
region = Rect2(528, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_kbnoq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vkv4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebvjo")
}],
"loop": true,
"name": &"keyboard",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_663ar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k2bls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv4dn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eftg0")
}],
"loop": true,
"name": &"nintendo",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_at0u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7clw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgp33")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ub1rt")
}],
"loop": true,
"name": &"playstation",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouias")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1y2h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ha8d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x67w8")
}],
"loop": true,
"name": &"xbox",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_7uais"]
atlas = ExtResource("2_fl3x3")
region = Rect2(80, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s7yj2"]
atlas = ExtResource("2_fl3x3")
region = Rect2(64, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tyxyj"]
atlas = ExtResource("2_fl3x3")
region = Rect2(80, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bonm"]
atlas = ExtResource("2_fl3x3")
region = Rect2(96, 176, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2agd1"]
atlas = ExtResource("3_1lsbx")
region = Rect2(183, 71, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_5x4bt"]
atlas = ExtResource("3_1lsbx")
region = Rect2(183, 53, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_wm0ud"]
atlas = ExtResource("3_1lsbx")
region = Rect2(165, 71, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_b86w8"]
atlas = ExtResource("3_1lsbx")
region = Rect2(183, 89, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_fktk8"]
atlas = ExtResource("3_1lsbx")
region = Rect2(201, 71, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_36haj"]
atlas = ExtResource("4_g0thu")
region = Rect2(215, 71, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_jta8x"]
atlas = ExtResource("4_g0thu")
region = Rect2(215, 53, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjfta"]
atlas = ExtResource("4_g0thu")
region = Rect2(197, 71, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_aov2a"]
atlas = ExtResource("4_g0thu")
region = Rect2(233, 71, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ifpcc"]
atlas = ExtResource("4_g0thu")
region = Rect2(215, 89, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_064rm"]
atlas = ExtResource("5_0bg8b")
region = Rect2(215, 71, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_kk0ib"]
atlas = ExtResource("5_0bg8b")
region = Rect2(197, 71, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_qle3g"]
atlas = ExtResource("5_0bg8b")
region = Rect2(215, 89, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_ukxtl"]
atlas = ExtResource("5_0bg8b")
region = Rect2(215, 53, 18, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_wehh8"]
atlas = ExtResource("5_0bg8b")
region = Rect2(233, 71, 18, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_p23vy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uais")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s7yj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tyxyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bonm")
}],
"loop": true,
"name": &"keyboard",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2agd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5x4bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2agd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wm0ud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2agd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b86w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2agd1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fktk8")
}],
"loop": true,
"name": &"nintendo",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36haj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jta8x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36haj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjfta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36haj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aov2a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_36haj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ifpcc")
}],
"loop": true,
"name": &"playstation",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_064rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kk0ib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_064rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qle3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_064rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ukxtl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_064rm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wehh8")
}],
"loop": true,
"name": &"xbox",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1arq3"]
atlas = ExtResource("2_fl3x3")
region = Rect2(112, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_568jm"]
atlas = ExtResource("2_fl3x3")
region = Rect2(112, 272, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_phppx"]
atlas = ExtResource("3_1lsbx")
region = Rect2(480, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfifq"]
atlas = ExtResource("3_1lsbx")
region = Rect2(496, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5prx0"]
atlas = ExtResource("3_1lsbx")
region = Rect2(512, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbga5"]
atlas = ExtResource("3_1lsbx")
region = Rect2(528, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hoy4"]
atlas = ExtResource("4_g0thu")
region = Rect2(480, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rntr"]
atlas = ExtResource("4_g0thu")
region = Rect2(496, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ug5wb"]
atlas = ExtResource("4_g0thu")
region = Rect2(512, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1q6yd"]
atlas = ExtResource("4_g0thu")
region = Rect2(528, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_78so3"]
atlas = ExtResource("5_0bg8b")
region = Rect2(480, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5erj"]
atlas = ExtResource("5_0bg8b")
region = Rect2(496, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kg7qw"]
atlas = ExtResource("5_0bg8b")
region = Rect2(512, 80, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2g3c"]
atlas = ExtResource("5_0bg8b")
region = Rect2(528, 80, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_f36ap"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1arq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_568jm")
}],
"loop": true,
"name": &"keyboard",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_phppx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfifq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5prx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbga5")
}],
"loop": true,
"name": &"nintendo",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hoy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rntr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ug5wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1q6yd")
}],
"loop": true,
"name": &"playstation",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_78so3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5erj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kg7qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2g3c")
}],
"loop": true,
"name": &"xbox",
"speed": 2.0
}]

[sub_resource type="Animation" id="Animation_crbl5"]
resource_name = "controls_dissappear"
length = 10.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ReferenceRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(7, 9.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ReferenceRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(9.6),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2h5uj"]
_data = {
"controls_dissappear": SubResource("Animation_crbl5")
}

[node name="Area2D" type="CanvasLayer"]
script = ExtResource("1_jx558")

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
border_width = 0.0

[node name="RichTextLabel" type="RichTextLabel" parent="ReferenceRect"]
layout_mode = 0
offset_left = -213.0
offset_top = -726.0
offset_right = -2.0
offset_bottom = -7.0
theme_override_fonts/normal_font = ExtResource("1_tvw4l")
theme_override_font_sizes/normal_font_size = 64
text = "Shoot

Parry

Roll

Move

Reload"
scroll_active = false

[node name="ShootControlSprite" type="AnimatedSprite2D" parent="ReferenceRect"]
position = Vector2(-325, -700)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_wtu13")
animation = &"keyboard"

[node name="ParryControlSprite" type="AnimatedSprite2D" parent="ReferenceRect"]
position = Vector2(-325, -560)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_kkyq8")
animation = &"keyboard"

[node name="RollControlSprite" type="AnimatedSprite2D" parent="ReferenceRect"]
position = Vector2(-325, -410)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_kbnoq")
animation = &"keyboard"

[node name="MoveControlSprite" type="AnimatedSprite2D" parent="ReferenceRect"]
position = Vector2(-325, -280)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_p23vy")
animation = &"keyboard"

[node name="ReloadControlSprite" type="AnimatedSprite2D" parent="ReferenceRect"]
visible = false
position = Vector2(-325, -150)
scale = Vector2(6, 6)
sprite_frames = SubResource("SpriteFrames_f36ap")
animation = &"keyboard"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2h5uj")
}
